[package]
name = "aghpb-tui"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[dependencies]
aghpb = "1.4.1"
bytes = "1.6.0"
color-eyre = "0.6.3"
dirs = "5.0.1"
image = "0.25.1"
ratatui = "0.27.0"
ratatui-image = "1.0.3"
textwrap = "0.16.1"
tokio = { version = "1.38.0", features = ["full"] }
tui-input = "0.9.0"
